[tool.poetry]
name = "exasol-bucketfs-utils-python"
version = "0.4.0"
description = "BucketFS utilities for the Python programming language"

license = "MIT"

authors = [
    "Torsten Kilias <torsten.kilias@exasol.com>",
    "Anastasiia Sergienko <anastasiia.sergienko@exasol.com>"
]

readme = 'README.rst'

repository = "https://github.com/exasol/bucketfs-utils-python"
homepage = "https://github.com/exasol/bucketfs-utils-python"

keywords = ['exasol', 'bucketfs']

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.24.0"
joblib=">=1.0.1"
typeguard = ">=2.11.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
Sphinx = "^4.5"
myst-parser = "^0.17.0"
pyexasol = "^0.24.0"
dill = "^0.3.4"
exasol-udf-mock-python = { git = "https://github.com/exasol/udf-mock-python.git", branch = "master" }
exasol-sphinx-github-pages-generator = { git = "https://github.com/exasol/sphinx-github-pages-generator.git", tag = "0.1.0"}
gitpython = ">=2.1.0"
toml = ">=0.10.2"
nox = "^2022.1.7"

